@@ -171,6 +171,7 @@ FHEM/46_TRX_LIGHT.pm         wherzig              http://forum.fhem.de RFXTRX
 FHEM/46_TRX_SECURITY.pm      wherzig              http://forum.fhem.de RFXTRX
 FHEM/46_TRX_WEATHER.pm       wherzig              http://forum.fhem.de RFXTRX
 FHEM/49_IPCAM.pm             mfr69bs              http://forum.fhem.de Sonstiges
+FHEM/50_HP1000.pm            loredo               http://forum.fhem.de Heizungssteuerung/Raumklima
 FHEM/50_WS300.pm             Dirk                 http://forum.fhem.de SlowRF
 FHEM/50_TelegramBot.pm       viegener             http://forum.fhem.de Unterstuetzende Dienste
 FHEM/51_I2C_BMP180.pm        Dirk                 http://forum.fhem.de Einplatinencomputer
